# Audio-Cutter-Android

./: .gitattributes  .gitignore  LICENSE  README.md  admob.properties.example  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lame_jni.cpp
app/src/main/java/com/workwavestudio/audiocutter/: AppPreferences.kt  AudioCutterViewModel.kt  AudioTrimProcessor.kt  LameMp3Encoder.kt  MainActivity.kt
app/src/main/java/com/workwavestudio/audiocutter/ui/: Ads.kt  AudioCutterScreen.kt
app/src/main/java/com/workwavestudio/audiocutter/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_splash_logo.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: DEVELOPER_GUIDE.md  PRIVACY_POLICY.md  STORE_LISTING.md  TERMS_OF_SERVICE.md  USER_GUIDE.md
